--- a/src/paginas/pregFrecuentes.html
+++ b/src/paginas/pregFrecuentes.html
@@ -7,9 +7,9 @@
     <title>Rolling Clinic - Policonsultorios</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-        <link rel="stylesheet" href="../css/pregFrecuentes.css">
-        <link rel="stylesheet" href="../css/global.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="../css/pregFrecuentes.css">
+    <link rel="stylesheet" href="../css/global.css">
     <!-- Link Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,60 +19,177 @@
 </head>
 
 <body class="container">
-    <body>
-        <main class="container">
-
-            <section class="main-container">
-
-                <article>
-                    <div class="encabezado rounded rounded-sm">
-                        <h4>Preguntas frecuentes</h4>
+    <header>
+        <nav class="navbar navbar-expand-md">
+            <div class="navbar-logo col-md-4 d-flex justify-content-md-center justify-content-between col-12">
+                <a class="navbar-brand d-flex justify-content-center align-items-center w-100" href="../../index.html">
+                    <img src="../iconos/health-icon.svg" alt="Logo" width="50" height="40"
+                        class="d-inline-block align-text-center">
+                    Rolling Clínica
+                </a>
+                <button class="navbar-toggler border border-2 border-light" data-bs-theme="light" type="button"
+                    data-bs-target="#navbarNav" id="navbar-toggler" aria-controls="navbarNav" aria-expanded="false"
+                    aria-label="Toggle navigation" popovertarget="menu-nav">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            </div>
+            <div class="d-md-flex justify-content-between align-items-center d-none col-md-8 " id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="../../index.html">Inicio</a>
+                    </li>
+                    <!-- <li class="nav-item">
+                      <a class="nav-link" href="#">Servicios</a>
+                  </li> -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="./nosotros.html">Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./contacto.html">Contacto</a>
+                    </li>
+                </ul>
+                <div class="btn-reg-log d-flex gap-2 align-items-center justify-content-center mt-md-0 ms-1">
+                    <a role="button" href="./registro.html" class="btn-secundario rounded rounded-sm p-1">Registro</a>
+                    <button class="btn-primario btn-login rounded rounded-sm p-1">Login</button>
+                </div>
+            </div>
+            <!-- MENU POPOVER MOBILE -->
+            <div class="menu-nav d-flex d-md-none flex-column" id="menu-nav" popover role="menu">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="../../index.html">Inicio</a>
+                    </li>
+                    <!-- <li class="nav-item">
+                      <a class="nav-link" href="#">Servicios</a>
+                  </li> -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="./nosotros.html">Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./contacto.html">Contacto</a>
+                    </li>
+                </ul>
+                <div class="btn-reg-log d-flex gap-2 align-items-center mt-1 mt-md-0">
+                    <a role="button" href="./registro.html" class="btn-secundario rounded rounded-sm p-1">Registro</a>
+                    <button class="btn-primario rounded rounded-sm p-1 btn-login">Login</button>
+                </div>
+            </div>
+            <!-- FIN MENU MOBILE -->
+            <!-- MODAL LOGIN -->
+            <dialog id="modal-login">
+                <form method="dialog" id="form-login">
+                    <button type="button" class="btn-close m-1 border border-2 border-white p-1 bg-light"
+                        id="btn-close-login" aria-label="Close"></button>
+                    <div class="input-group">
+                        <span for="usuario" class="input-group-text">Usuario</span>
+                        <input type="text" name="usuario" id="usuario" class="form-control" autofocus>
                     </div>
-                </article>
-                <article>
+                    <div class="input-group">
+                        <span for="password" class="input-group-text">Password</span>
+                        <input type="password" name="password" id="password" class="form-control">
+                    </div>
+                    <div class="login-buttons">
+                        <button class="btn-primario rounded rounded-sm p-1" id="btn-login-ingresar">Ingresar</button>
+                        <button class="btn-secundario rounded rounded-sm p-1" id="btn-login-cancelar">Cancelar</button>
+                    </div>
+                    <p class="">Aun no tenes cuenta? <a class="btn-orange btn-sm rounded rounded-sm p-2"
+                            href="./registro.html">Registrarse</a></p>
+                </form>
+            </dialog>
+            <!-- FIN MODAL LOGIN -->
+            <!-- <div class="container-fluid d-flex justify-content-between">
+          </div> -->
+        </nav>
+    </header>
+    <main class="container">
 
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">¿Cuáles son los servicios médicos que ofrece la clínica?</h5>
-                            <p class="card-text">Nuestra clínica ofrece una amplia gama de servicios médicos, que
-                                incluyen consultas generales, chequeos médicos, análisis de laboratorio,
-                                atención de enfermedades crónicas, vacunación, entre otros.</p>
-                            <hr>
-                            <h5 class="card-title">¿Cómo puedo solicitar un turno?</h5>
-                            <p class="card-text">Puedes solicitar una cita médica llamando a nuestro número telefónico
-                                de
-                                atención al paciente o utilizando nuestro sistema de turnos en línea.</p>
-                            <hr>
-                            <h5 class="card-title">¿Qué debo hacer en caso de una emergencia médica fuera del horario de
-                                atención?</h5>
-                            <p class="card-text">Nuestra clínica ofrece una amplia gama de servicios médicos, que
-                                incluyen consultas generales, chequeos médicos, análisis de laboratorio,
-                                atención de enfermedades crónicas, vacunación, entre otros.</p>
-                            <hr>
-                            <h5 class="card-title">¿Reciben obras sociales?</h5>
-                            <p class="card-text">Aceptamos la mayoría de los seguros médicos. Si tienes alguna pregunta
-                                específica sobre tu seguro, no dudes en contactarnos.</p>
-                            <hr>
-                            <h5 class="card-title">¿Cómo puedo obtener mis resultados de laboratorio?</h5>
-                            <p class="card-text">Los resultados de laboratorio estarán disponibles a través de nuestro
-                                sistema en línea. Te proporcionaremos instrucciones y un código de
-                                acceso para acceder a tus resultados de manera segura. También puedes
-                                llamar a nuestra clínica para obtener información sobre tus resultados.</p>
-                        </div>
+        <section class="main-container">
 
-                        <img src="../img/Foto.png" class="img card-img-bottom" alt="...">
-                </article>
-            </section>
-        </main>
+            <article>
+                <div class="encabezado rounded rounded-sm">
+                    <h4>Preguntas frecuentes</h4>
+                </div>
+            </article>
+            <article>
 
-        <!-- SCRIPTS -->
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">¿Cuáles son los servicios médicos que ofrece la clínica?</h5>
+                        <p class="card-text">Nuestra clínica ofrece una amplia gama de servicios médicos, que
+                            incluyen consultas generales, chequeos médicos, análisis de laboratorio,
+                            atención de enfermedades crónicas, vacunación, entre otros.</p>
+                        <hr>
+                        <h5 class="card-title">¿Cómo puedo solicitar un turno?</h5>
+                        <p class="card-text">Puedes solicitar una cita médica llamando a nuestro número telefónico
+                            de
+                            atención al paciente o utilizando nuestro sistema de turnos en línea.</p>
+                        <hr>
+                        <h5 class="card-title">¿Qué debo hacer en caso de una emergencia médica fuera del horario de
+                            atención?</h5>
+                        <p class="card-text">Nuestra clínica ofrece una amplia gama de servicios médicos, que
+                            incluyen consultas generales, chequeos médicos, análisis de laboratorio,
+                            atención de enfermedades crónicas, vacunación, entre otros.</p>
+                        <hr>
+                        <h5 class="card-title">¿Reciben obras sociales?</h5>
+                        <p class="card-text">Aceptamos la mayoría de los seguros médicos. Si tienes alguna pregunta
+                            específica sobre tu seguro, no dudes en contactarnos.</p>
+                        <hr>
+                        <h5 class="card-title">¿Cómo puedo obtener mis resultados de laboratorio?</h5>
+                        <p class="card-text">Los resultados de laboratorio estarán disponibles a través de nuestro
+                            sistema en línea. Te proporcionaremos instrucciones y un código de
+                            acceso para acceder a tus resultados de manera segura. También puedes
+                            llamar a nuestra clínica para obtener información sobre tus resultados.</p>
+                    </div>
 
-        <!-- Script bootstrap -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-            crossorigin="anonymous"></script>
-        <!-- Script Swiper -->
-        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    </body>
+                    <img src="../img/Foto.png" class="img card-img-bottom" alt="...">
+            </article>
+        </section>
+    </main>
+
+    <!-- FOOTER -->
+    <footer class="container">
+        <article
+            class="d-flex flex-column-reverse align-items-center justify-content-center w-100 gap-2 flex-sm-row flex-wrap justify-content-sm-between">
+            <div
+                class="col-lg-4 d-flex col-12 col-sm-3 justify-content-center align-items-center bordesFooter align-self-stretch">
+                <h3><i class="fa-solid fa-truck-medical fa-fade fa-2xl"> </i> </h3>
+                <div class="m-3"><img src="../img/ministerioSalud.jpg" alt="logo ministerio de salud de la nacion"
+                        srcset=""> </div>
+            </div>
+            <div class="col-lg-4 d-flex col-12 col-sm-3 align-items-stretch justify-content-center bordesFooter">
+                <ul
+                    class="d-flex flex-column justify-content-around align-items-center gap-4 p-3 w-100 h-100 text-center text-sm-start">
+                    <li class="list-group-item w-100"><a class="footer-links" href="#" target="_blank">Mis turnos</a>
+                    </li>
+                    <li class="list-group-item w-100"><a class="footer-links" href="#" target="_blank">Contacto</a></li>
+                    <li class="list-group-item w-100"><a class="footer-links" href="#" target="_blank">Politicas de
+                            Privacidad</a></li>
+                    <li class="list-group-item w-100"><a class="footer-links" href="#" target="_blank">Ministerio de
+                            salud</a></li>
+                </ul>
+            </div>
+            <div class="col-lg-4 d-flex col-12 col-sm-6 justify-content-center align-items-stretch bordesFooter p-3">
+                <div class="container d-flex justify-content-between flex-column align-items-center"
+                    id="redesSocialesFooter">
+                    <p class="row">Nuestras redes sociales</p>
+                    <div
+                        class="d-flex mb-1 justify-content-between w-100 align-items-start flex-column footer-icons gap-2">
+                        <a class="d-flex justify-content-start align-items-center ps-2 gap-2" href="#"
+                            target="_blank"><i class="fa-brands fa-x-twitter fa-lg"></i> Twitter</a>
+                        <a class="d-flex justify-content-start align-items-center ps-2 gap-2" href="#"
+                            target="_blank"><i class="fa-brands fa-facebook fa-lg"></i> Facebook</a>
+                        <a class="d-flex justify-content-start align-items-center ps-2 gap-2" href="#"
+                            target="_blank"><i class="fa-brands fa-instagram fa-lg"></i> Instagram</a>
+                    </div>
+                </div>
+            </div>
+        </article>
+    </footer>
+    <!-- SCRIPTS -->
+    <script src="../js/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+</body>
 
 </html>
