--- a/src/paginas/error404.html
+++ b/src/paginas/error404.html
@@ -12,82 +12,6 @@
     ></script>
 </head>
 <body class="body-container">
-    <header>
-        <!-- bg-body-tertiary -->
-        <nav class="navbar navbar-expand-md ">
-            <div class="container-fluid d-flex justify-content-between">
-                <div class="navbar-logo col-md-4 d-flex justify-content-between col-12">
-                    <a class="navbar-brand" href="#">
-                        <img src="../iconos/health-icon.svg" alt="Logo" width="50" height="40" class="d-inline-block align-text-center">
-                    Rolling Consultorios
-                    </a>
-                    <button class="navbar-toggler border border-2 border-light" data-bs-theme="dark" type="button" data-bs-target="#navbarNav" id="navbar-toggler" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" popovertarget="menu-nav">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                </div>
-                <div class="d-md-flex justify-content-between align-items-center d-none" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">Inicio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Servicios</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Nosotros</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contacto</a>
-                        </li>
-                    </ul>
-                    <div class="btn-reg-log d-flex gap-2 align-items-center mt-3 mt-md-0 ms-5">
-                        <button class="btn btn-secondary">Registro</button>
-                        <button class="btn btn-primary btn-login">Login</button>
-                    </div>
-                </div>
-                <!-- MENU POPOVER MOBILE -->
-                <div class="menu-nav text-light" id="menu-nav" popover role="menu">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Servicios</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Nosotros</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contacto</a>
-                        </li>
-                    </ul>
-                    <div class="btn-reg-log d-flex gap-2 align-items-center mt-3 mt-md-0">
-                        <button class="btn btn-secondary">Registro</button>
-                        <button class="btn btn-primary btn-login">Login</button>
-                    </div>
-                </div>
-                <!-- MODAL LOGIN -->
-                <dialog id="modal-login">
-                    <form method="dialog" id="form-login">
-                        <button type="button" class="btn-close m-1 border border-2 border-white p-1 bg-light" id="btn-close-login" aria-label="Close"></button>
-                        <div class="input-group">
-                            <span for="usuario" class="input-group-text">Usuario</span>
-                            <input type="text" name="usuario" id="usuario" class="form-control" autofocus>
-                        </div>
-                        <div class="input-group">
-                            <span for="password" class="input-group-text">Password</span>
-                            <input type="password" name="password" id="password" class="form-control">
-                        </div>
-                        <div class="login-buttons">
-                            <button class="btn btn-primary" id="btn-login-ingresar">Ingresar</button>
-                            <button class="btn btn-secondary" id="btn-login-cancelar">Cancelar</button>
-                        </div>
-                        <p class="">Aun no tenes cuenta? <a class="btn btn-orange btn-sm" href="#">Registrarse</a></p>
-                    </form>
-                </dialog>
-            </div>
-        </nav>
-    </header>
     <main class="container contenedor d-flex justify-content-center align-items-center flex-column rounded-2">
         <h1 class="text-center btn fs-1 fw-bold">Oops!.. </h1>
         <section class="container">
@@ -98,36 +22,8 @@
         <p class="text-center">Parece que esta pagina <span class="fw-bold">no está disponible</span></p>
         <a href="../../index.html" class="btn btn-orange rounded-2 place-self-center mb-4">Volver a Página Principal</a>
     </main>
-
-    <footer class="container">
-        <article class="row d-flex justify-content-center justify-content-md-around align-items-center w-100">
-            <div class="col-lg-4 d-flex col-6 justify-content-around align-items-center bordesFooter align-self-stretch" >
-                <h3><i class="fa-solid fa-truck-medical fa-fade fa-2xl"> </i>           </h3>    
-                <div class="m-3"><img src="./img/ministerioSalud.jpg" alt="" srcset=""> </div>
-                </div>
-            <div class="col-lg-4 d-flex col-6  align-items-center bordesFooter"> 
-                <ul class="d-flex justify-content-between flex-column align-items-start gap-3 p-3 pt-3 w-100">
-                    <li class="list-group-item w-100"><a class="footer-links" href="#" target="_blank">Mis turnos</a></li>
-                    <li class="list-group-item w-100"><a class="footer-links" href="#" target="_blank">Contacto</a></li>
-                    <li class="list-group-item w-100"><a class="footer-links" href="#" target="_blank">Politicas de Privacidad</a></li>
-                    <li class="list-group-item w-100"><a class="footer-links" href="#" target="_blank">Ministerio de salud</a></li>
-                </ul>
-            </div>
-            <div class="col-lg-4 d-flex col-12 justify-content-center align-items-stretch bordesFooter p-3" > 
-                <div class="container d-flex justify-content-between flex-column align-items-center" id="redesSocialesFooter">
-                    <p class="row">Nuestras redes sociales</p>
-                    <div class="d-flex mb-1 justify-content-between w-100 align-items-start flex-column footer-icons gap-2">
-                        <a class="d-flex justify-content-start align-items-center ps-2 gap-2" href="#" target="_blank"><i class="fa-brands fa-x-twitter fa-lg"></i> Twitter</a>
-                        <a class="d-flex justify-content-start align-items-center ps-2 gap-2" href="#" target="_blank"><i class="fa-brands fa-facebook fa-lg"></i> Facebook</a>
-                        <a class="d-flex justify-content-start align-items-center ps-2 gap-2" href="#" target="_blank"><i class="fa-brands fa-instagram fa-lg"></i> Instagram</a>
-                    </div>
-                </div>
-            </div>
-        </article>
-    </footer>
-    
     <!-- SCRIPTS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="../js/scriptLogin.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 </html>
