--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                                         <textarea class="form-control border-1" id="consulta" name="consulta" minlength="4" maxlength="300" rows="2"></textarea>
                                     </div>
                                     <div class="col-12 container-fluid text-center">
-                                        <button type="submit" class="btn btn-primario mt-3" id= btnEnviarConsulta onclick="guardarConsulta"row="2">Enviar consulta</button>
+                                        <button type="submit" class="btn btn-primario mt-3" id="btnEnviarConsulta" onclick="guardarConsulta"row="2">Enviar consulta</button>
                                     </div>
                                 </form> 
                         </div>
