--- a/src/paginas/registro.html
+++ b/src/paginas/registro.html
@@ -157,7 +157,7 @@
                     </div>
                     <div class="form-group d-flex flex-column flex-sm-row justify-sm-content-around align-sm-items-center col-12">
                         <label for="telefono" class="form-label col-sm-3 fw-bold">Teléfono</label>
-                        <input type="tel" name="telefono" class="form-control" id="phone" placeholder="" pattern="^[0-9]{10}$" required>
+                        <input type="tel" name="telefono" class="form-control" id="phone" placeholder="" pattern="^[0-9]{10}$" required maxlength="10">
                     </div>
                     <div class="d-flex flex-column justify-content-center gap-3 col-12 col-sm-6 m-auto">
                         <button type="submit" class="btn btn-primario btn-block btn-submit">Registrar</button>
